<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/total_background_img"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutForLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <!--android:layout_alignBottom="@+id/linearLayout"-->
        <TextView
            android:id="@+id/label_encyc_main"
            style="@style/lable_encyc_main_style"
            android:text="@string/encyclopedia" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/linearlayout_for_btns_main_style"
        android:background="@drawable/linearlayout_bg">

        <Button
            android:id="@+id/encyc_btn_main"
            style="@style/encyc_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/encyclopedia_btn_main" />

        <Button
            android:id="@+id/game_btn_main"
            style="@style/game_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/game_btn_main" />

        <Button
            android:id="@+id/settings_btn_main"
            style="@style/settings_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/settings_btn_main" />

        <Button
            android:id="@+id/help_btn_main"
            style="@style/help_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/help_btn_main" />

    </LinearLayout>
</RelativeLayout>
