<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/total_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutForLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp">

        <!--android:layout_alignBottom="@+id/linearLayout"-->
        <TextView
            android:id="@+id/label_game_gamenu"
            style="@style/lable_encyc_main_style"
            android:text="@string/game_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/linearlayout_bg"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/lable_name_gamemenu_style"
                android:text="@string/user_name_gamemenu"
                android:layout_marginRight="4dp"
                android:id="@+id/textView" />

            <TextView
                android:id="@+id/user_name"
                style="@style/lable_name_gamemenu_style"
                android:text="Noname" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/linearlayout_for_btns_gamemenu_style"
        android:background="@drawable/linearlayout_bg">

        <Button
            android:id="@+id/new_game_btn"
            style="@style/encyc_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/new_game_gamemenu" />

        <Button
            android:id="@+id/login_btn"
            style="@style/game_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/login_gamemenu" />

        <Button
            android:id="@+id/settings_btn_main"
            style="@style/help_btn_main_style"
            android:background="@drawable/btn_bg_main"
            android:text="@string/statistica_gamemenu" />

    </LinearLayout>

</RelativeLayout>
